--- a/sites/default/config/PAFF.settings.yml
+++ b/sites/default/config/PAFF.settings.yml
@@ -12,9 +12,19 @@ logo:
   use_default: false
 table_responsive: '-1'
 table: ''
+cdn_provider: ''
 features:
   comment_user_picture: true
   comment_user_verification: true
   favicon: true
   node_user_picture: true
-cdn_provider: ''
+region_wells:
+  navigation: ''
+  navigation_collapsible: ''
+  header: ''
+  highlighted: ''
+  help: ''
+  content: ''
+  sidebar_first: ''
+  sidebar_second: ''
+  footer: ''
