--- a/sites/default/config/core.entity_view_display.node.film.teaser.yml
+++ b/sites/default/config/core.entity_view_display.node.film.teaser.yml
@@ -14,6 +14,7 @@ dependencies:
     - field.field.node.film.field_duration
     - field.field.node.film.field_editing
     - field.field.node.film.field_festivals
+    - field.field.node.film.field_image
     - field.field.node.film.field_music
     - field.field.node.film.field_producer
     - field.field.node.film.field_production
@@ -45,6 +46,7 @@ hidden:
   field_duration: true
   field_editing: true
   field_festivals: true
+  field_image: true
   field_music: true
   field_producer: true
   field_production: true
