--- a/sites/default/config/core.entity_view_display.node.location.default.yml
+++ b/sites/default/config/core.entity_view_display.node.location.default.yml
@@ -10,7 +10,6 @@ dependencies:
     - node.type.location
   module:
     - address
-    - geofield
     - image
     - text
     - user
@@ -25,13 +24,6 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: address_default
-  field_geofield:
-    weight: 104
-    label: above
-    settings:
-      output_format: wkt
-    third_party_settings: {  }
-    type: geofield_default
   field_image:
     weight: 102
     label: above
@@ -50,4 +42,5 @@ content:
     weight: 100
     settings: {  }
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  field_geofield: true
