--- a/sites/default/config/field.field.node.film.field_image.yml
+++ b/sites/default/config/field.field.node.film.field_image.yml
@@ -1,19 +1,17 @@
-uuid: 8d0cf243-387b-4e03-8b9d-4263f2227807
+uuid: f44d9cd8-91dd-49b1-a26b-c8dd276100fb
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.node.field_image
-    - node.type.article
+    - node.type.film
   module:
     - image
-_core:
-  default_config_hash: tgJzhA7Swh4M_gWU5FwFe5lPxPj5rebpMbvhpdNrERs
-id: node.article.field_image
+id: node.film.field_image
 field_name: field_image
 entity_type: node
-bundle: article
-label: Image
+bundle: film
+label: Poster
 description: ''
 required: false
 translatable: true
