Slider image-style fix

--- a/sites/default/config/core.entity_view_display.node.article.default.yml
+++ b/sites/default/config/core.entity_view_display.node.article.default.yml
@@ -34,10 +34,7 @@ content:
       image_link: ''
     third_party_settings: {  }
     label: hidden
-  links:
-    weight: 2
-    settings: {  }
-    third_party_settings: {  }
 hidden:
   comment: true
   field_tags: true
+  links: true
