--- a/sites/default/config/core.entity_view_display.node.article.slider.yml
+++ b/sites/default/config/core.entity_view_display.node.article.slider.yml
@@ -22,10 +22,10 @@ bundle: article
 mode: slider
 content:
   body:
-    type: text_summary_or_trimmed
+    type: text_trimmed
     weight: 1
     settings:
-      trim_length: 600
+      trim_length: 500
     third_party_settings: {  }
     label: hidden
   field_image:
@@ -36,10 +36,7 @@ content:
       image_link: ''
     third_party_settings: {  }
     label: hidden
-  links:
-    weight: 2
-    settings: {  }
-    third_party_settings: {  }
 hidden:
   comment: true
   field_tags: true
+  links: true
