--- a/sites/default/config/core.entity_view_display.node.article.teaser.yml
+++ b/sites/default/config/core.entity_view_display.node.article.teaser.yml
@@ -23,29 +23,20 @@ mode: teaser
 content:
   body:
     type: text_summary_or_trimmed
-    weight: 0
+    weight: 1
     settings:
       trim_length: 600
     third_party_settings: {  }
     label: hidden
   field_image:
     type: image
-    weight: -1
+    weight: 0
     settings:
       image_style: medium
       image_link: content
     third_party_settings: {  }
     label: hidden
-  field_tags:
-    type: entity_reference_label
-    weight: 10
-    settings:
-      link: true
-    third_party_settings: {  }
-    label: above
-  links:
-    weight: 100
 hidden:
   comment: true
-  field_image: true
   field_tags: true
+  links: true
