--- a/sites/default/config/core.entity_view_display.node.film.default.yml
+++ b/sites/default/config/core.entity_view_display.node.film.default.yml
@@ -38,9 +38,10 @@ content:
   body:
     weight: 3
     label: above
-    settings: {  }
+    settings:
+      trim_length: 500
     third_party_settings: {  }
-    type: text_default
+    type: text_trimmed
   field_cast:
     weight: 11
     label: above
