--- a/themes/PAFF/PAFF.info.yml
+++ b/themes/PAFF/PAFF.info.yml
@@ -15,6 +15,7 @@ regions:
   content: 'Content'
   sidebar_first: 'Primary'
   sidebar_second: 'Secondary'
+  above_footer: 'Above Footer'
   footer: 'Footer'
   page_top: 'Page top'
   page_bottom: 'Page bottom'
