--- a/sites/default/config/core.entity_view_display.node.sponsor.default.yml
+++ b/sites/default/config/core.entity_view_display.node.sponsor.default.yml
@@ -35,8 +35,5 @@ content:
       target: ''
     third_party_settings: {  }
     type: link
-  links:
-    weight: 100
-    settings: {  }
-    third_party_settings: {  }
-hidden: {  }
+hidden:
+  links: true
