--- a/sites/default/config/image.style.slider_nav.yml
+++ b/sites/default/config/image.style.slider_nav.yml
@@ -5,11 +5,10 @@ dependencies: {  }
 name: slider_nav
 label: Slider-nav
 effects:
-  79673ef2-308c-46ee-8b02-5eb0071df1c0:
-    uuid: 79673ef2-308c-46ee-8b02-5eb0071df1c0
-    id: image_scale
+  a909784b-1805-406d-ad2a-3cc4daa0d894:
+    uuid: a909784b-1805-406d-ad2a-3cc4daa0d894
+    id: image_scale_and_crop
     weight: 1
     data:
-      width: null
+      width: 280
       height: 150
-      upscale: false
