--- a/sites/default/config/core.entity_view_display.node.article.teaser.yml
+++ b/sites/default/config/core.entity_view_display.node.article.teaser.yml
@@ -22,10 +22,10 @@ bundle: article
 mode: teaser
 content:
   body:
-    type: text_summary_or_trimmed
+    type: text_trimmed
     weight: 1
     settings:
-      trim_length: 600
+      trim_length: 500
     third_party_settings: {  }
     label: hidden
   field_image:
