--- a/sites/default/config/core.entity_view_display.node.event.teaser.yml
+++ b/sites/default/config/core.entity_view_display.node.event.teaser.yml
@@ -11,17 +11,32 @@ dependencies:
     - field.field.node.event.field_long_text
     - node.type.event
   module:
+    - datetime
     - user
 id: node.event.teaser
 targetEntityType: node
 bundle: event
 mode: teaser
 content:
+  field_date_and_time:
+    type: datetime_plain
+    weight: 1
+    label: above
+    settings:
+      timezone_override: ''
+    third_party_settings: {  }
+  field_en:
+    type: datetime_plain
+    weight: 2
+    label: above
+    settings:
+      timezone_override: ''
+    third_party_settings: {  }
   links:
-    weight: 100
+    weight: 0
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   field_content_reference: true
-  field_date_and_time: true
-  field_en: true
   field_image: true
   field_long_text: true
