--- a/sites/default/config/core.entity_view_display.node.location.teaser.yml
+++ b/sites/default/config/core.entity_view_display.node.location.teaser.yml
@@ -8,18 +8,39 @@ dependencies:
     - field.field.node.location.field_geofield
     - field.field.node.location.field_image
     - field.field.node.location.field_long_text
+    - image.style.large
     - node.type.location
   module:
+    - address
+    - image
+    - text
     - user
 id: node.location.teaser
 targetEntityType: node
 bundle: location
 mode: teaser
 content:
-  links:
-    weight: 100
+  field_address:
+    type: address_plain
+    weight: 2
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+  field_image:
+    type: image
+    weight: 1
+    label: hidden
+    settings:
+      image_style: large
+      image_link: ''
+    third_party_settings: {  }
+  field_long_text:
+    type: text_trimmed
+    weight: 0
+    label: hidden
+    settings:
+      trim_length: 600
+    third_party_settings: {  }
 hidden:
-  field_address: true
   field_geofield: true
-  field_image: true
-  field_long_text: true
+  links: true
