--- a/sites/default/config/field.field.node.article.field_image.yml
+++ b/sites/default/config/field.field.node.article.field_image.yml
@@ -15,7 +15,7 @@ entity_type: node
 bundle: article
 label: Image
 description: ''
-required: false
+required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
