--- a/sites/default/config/views.view.news.yml
+++ b/sites/default/config/views.view.news.yml
@@ -234,11 +234,14 @@ display:
         type: some
         options:
           items_per_page: 5
-          offset: null
+          offset: 1
       title: News
       style:
         type: default
-        options: {  }
+        options:
+          row_class: 'news-margin row'
+          default_row_class: true
+          uses_fields: false
       row:
         type: 'entity:node'
         options:
