--- a/sites/default/config/context.context.site_wide.yml
+++ b/sites/default/config/context.context.site_wide.yml
@@ -322,8 +322,8 @@ reactions:
         label: 'Page title'
         provider: core
         label_display: 0
-        region: header
-        weight: '0'
+        region: highlighted
+        weight: '-3'
         context_mapping: {  }
         theme: PAFF
         unique: 0
@@ -335,8 +335,8 @@ reactions:
         label_display: 0
         primary: 1
         secondary: 1
-        region: header
-        weight: '0'
+        region: highlighted
+        weight: '-2'
         context_mapping: {  }
         theme: PAFF
         unique: 0
@@ -363,17 +363,6 @@ reactions:
         theme: PAFF
         unique: 0
         uuid: cfa4367c-a958-437c-89f2-c3c49babbb36
-      6bb9e93e-5206-446e-a694-c4cce8a274fa:
-        id: system_powered_by_block
-        label: 'Powered by Drupal'
-        provider: system
-        label_display: 0
-        region: footer
-        weight: '0'
-        context_mapping: {  }
-        theme: PAFF
-        unique: 0
-        uuid: 6bb9e93e-5206-446e-a694-c4cce8a274fa
       c41e761d-b2a9-4c5d-9897-dbc8e1aa38f9:
         id: 'system_menu_block:footer'
         label: Footer
