--- a/sites/default/config/core.entity_view_display.node.film.default.yml
+++ b/sites/default/config/core.entity_view_display.node.film.default.yml
@@ -38,10 +38,9 @@ content:
   body:
     weight: 3
     label: above
-    settings:
-      trim_length: 500
+    settings: {  }
     third_party_settings: {  }
-    type: text_trimmed
+    type: text_default
   field_cast:
     weight: 11
     label: above
