--- a/sites/default/config/core.entity_view_display.node.person.teaser.yml
+++ b/sites/default/config/core.entity_view_display.node.person.teaser.yml
@@ -16,7 +16,9 @@ bundle: person
 mode: teaser
 content:
   links:
-    weight: 100
+    weight: 0
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   field_filmography: true
   field_image: true
