--- a/sites/default/config/views.view.locations.yml
+++ b/sites/default/config/views.view.locations.yml
@@ -74,6 +74,10 @@ display:
           quantity: 9
       style:
         type: default
+        options:
+          row_class: col-md-4
+          default_row_class: true
+          uses_fields: false
       row:
         type: 'entity:node'
         options:
@@ -187,6 +191,7 @@ display:
       relationships: {  }
       arguments: {  }
       display_extenders: {  }
+      css_class: row
     cache_metadata:
       max-age: -1
       contexts:
