--- a/sites/default/config/core.entity_view_display.node.film.schedule.yml
+++ b/sites/default/config/core.entity_view_display.node.film.schedule.yml
@@ -1,9 +1,9 @@
-uuid: a8d7cb3d-ed5b-4a66-9eec-c31b0bfeca93
+uuid: 06548fe3-5fd4-4eb5-b7b8-ebf109d21963
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.node.teaser
+    - core.entity_view_mode.node.schedule
     - field.field.node.film.body
     - field.field.node.film.field_cast
     - field.field.node.film.field_contact
@@ -28,44 +28,22 @@ dependencies:
     - node.type.film
   module:
     - datetime
-    - image
-    - text
     - user
-id: node.film.teaser
+id: node.film.schedule
 targetEntityType: node
 bundle: film
-mode: teaser
+mode: schedule
 content:
-  body:
-    type: text_trimmed
-    weight: 2
-    label: above
-    settings:
-      trim_length: 600
-    third_party_settings: {  }
   field_date_and_time:
-    type: datetime_plain
-    weight: 3
-    label: above
-    settings:
-      timezone_override: ''
-    third_party_settings: {  }
-  field_image:
-    type: image
-    weight: 1
-    label: above
-    settings:
-      image_style: ''
-      image_link: ''
-    third_party_settings: {  }
-  field_title_original:
-    type: text_trimmed
     weight: 0
     label: above
     settings:
-      trim_length: 600
+      format_type: medium
+      timezone_override: ''
     third_party_settings: {  }
+    type: datetime_default
 hidden:
+  body: true
   field_cast: true
   field_contact: true
   field_content_reference: true
@@ -74,6 +52,7 @@ hidden:
   field_duration: true
   field_editing: true
   field_festivals: true
+  field_image: true
   field_music: true
   field_producer: true
   field_production: true
@@ -82,5 +61,6 @@ hidden:
   field_set_design: true
   field_shooting: true
   field_sound: true
+  field_title_original: true
   field_year: true
   links: true
