--- a/sites/default/config/views.view.film_event_location.yml
+++ b/sites/default/config/views.view.film_event_location.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.node.teaser
+    - core.entity_view_mode.node.schedule
   module:
     - node
     - user
@@ -57,7 +57,8 @@ display:
       row:
         type: 'entity:node'
         options:
-          view_mode: teaser
+          relationship: none
+          view_mode: schedule
       fields:
         title:
           id: title
