--- a/sites/default/config/core.entity_view_display.node.location.default.yml
+++ b/sites/default/config/core.entity_view_display.node.location.default.yml
@@ -66,9 +66,10 @@ content:
   field_long_text:
     weight: 1
     label: hidden
-    settings: {  }
+    settings:
+      trim_length: 500
     third_party_settings: {  }
-    type: text_default
+    type: text_trimmed
   links:
     weight: 0
     settings: {  }
