--- a/sites/default/config/core.entity_view_display.node.film.default.yml
+++ b/sites/default/config/core.entity_view_display.node.film.default.yml
@@ -105,7 +105,7 @@ content:
     type: entity_reference_label
   field_image:
     weight: 21
-    label: above
+    label: hidden
     settings:
       image_style: ''
       image_link: ''
