--- a/sites/default/config/core.entity_view_display.node.film.list.yml
+++ b/sites/default/config/core.entity_view_display.node.film.list.yml
@@ -1,9 +1,9 @@
-uuid: a8d7cb3d-ed5b-4a66-9eec-c31b0bfeca93
+uuid: 3235d220-5bd3-4357-8090-b3b66d36c02e
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.node.teaser
+    - core.entity_view_mode.node.list
     - field.field.node.film.body
     - field.field.node.film.field_cast
     - field.field.node.film.field_contact
@@ -25,48 +25,41 @@ dependencies:
     - field.field.node.film.field_sound
     - field.field.node.film.field_title_original
     - field.field.node.film.field_year
-    - image.style.medium
     - node.type.film
   module:
     - datetime
     - image
     - text
     - user
-id: node.film.teaser
+id: node.film.list
 targetEntityType: node
 bundle: film
-mode: teaser
+mode: list
 content:
-  body:
-    type: text_trimmed
-    weight: 2
-    label: above
-    settings:
-      trim_length: 600
-    third_party_settings: {  }
   field_date_and_time:
-    type: datetime_plain
-    weight: 3
+    weight: 1
     label: above
     settings:
+      format_type: medium
       timezone_override: ''
     third_party_settings: {  }
+    type: datetime_default
   field_image:
     type: image
-    weight: 1
+    weight: 2
     label: hidden
     settings:
-      image_style: medium
+      image_style: ''
       image_link: ''
     third_party_settings: {  }
   field_title_original:
-    type: text_trimmed
     weight: 0
     label: above
-    settings:
-      trim_length: 600
+    settings: {  }
     third_party_settings: {  }
+    type: text_default
 hidden:
+  body: true
   field_cast: true
   field_contact: true
   field_content_reference: true
