--- a/sites/default/config/core.entity_view_display.node.event.mini_teaser.yml
+++ b/sites/default/config/core.entity_view_display.node.event.mini_teaser.yml
@@ -1,9 +1,9 @@
-uuid: af68012e-2b99-46fa-84fd-13383f0372c6
+uuid: ec5e6eb1-3b41-472b-b74c-dbcb2aee691a
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.node.schedule
+    - core.entity_view_mode.node.mini_teaser
     - field.field.node.event.field_content_reference
     - field.field.node.event.field_date_and_time
     - field.field.node.event.field_en
@@ -13,10 +13,10 @@ dependencies:
   module:
     - datetime
     - user
-id: node.event.schedule
+id: node.event.mini_teaser
 targetEntityType: node
 bundle: event
-mode: schedule
+mode: mini_teaser
 content:
   field_date_and_time:
     weight: 0
@@ -26,16 +26,9 @@ content:
       timezone_override: ''
     third_party_settings: {  }
     type: datetime_default
-  field_en:
-    weight: 1
-    label: above
-    settings:
-      format_type: medium
-      timezone_override: ''
-    third_party_settings: {  }
-    type: datetime_default
 hidden:
   field_content_reference: true
+  field_en: true
   field_image: true
   field_long_text: true
   links: true
