--- a/sites/default/config/views.view.locations.yml
+++ b/sites/default/config/views.view.locations.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.storage.node.field_address
     - node.type.location
+    - system.menu.main
     - views.view.map
   module:
     - address
@@ -210,6 +211,15 @@ display:
     display_options:
       display_extenders: {  }
       path: locations
+      menu:
+        type: normal
+        title: Locations
+        description: ''
+        expanded: false
+        parent: ''
+        weight: -48
+        context: '0'
+        menu_name: main
     cache_metadata:
       max-age: -1
       contexts:
