--- a/sites/default/config/views.view.sponsors.yml
+++ b/sites/default/config/views.view.sponsors.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - node.type.sponsor
+    - system.menu.main
   module:
     - node
     - user
@@ -205,6 +206,15 @@ display:
           quantity: 9
       defaults:
         pager: false
+      menu:
+        type: normal
+        title: Sponsors
+        description: ''
+        expanded: false
+        parent: ''
+        weight: -46
+        context: '0'
+        menu_name: main
     cache_metadata:
       max-age: -1
       contexts:
