--- a/sites/default/config/context.context.site_wide.yml
+++ b/sites/default/config/context.context.site_wide.yml
@@ -312,7 +312,7 @@ reactions:
         level: '1'
         depth: '0'
         region: navigation
-        weight: '-3'
+        weight: '-2'
         context_mapping: {  }
         theme: PAFF
         unique: 0
@@ -358,9 +358,9 @@ reactions:
         id: 'language_block:language_interface'
         label: 'Language switcher'
         provider: language
-        label_display: visible
-        region: sidebar_second
-        weight: '0'
+        label_display: 0
+        region: navigation
+        weight: '-1'
         context_mapping: {  }
         theme: PAFF
         unique: 0
