--- a/sites/default/config/field.field.node.event.field_long_text.yml
+++ b/sites/default/config/field.field.node.event.field_long_text.yml
@@ -14,7 +14,7 @@ bundle: event
 label: 'Event description'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
