--- a/sites/default/config/field.field.node.location.field_long_text.yml
+++ b/sites/default/config/field.field.node.location.field_long_text.yml
@@ -26,7 +26,7 @@ bundle: location
 label: Description
 description: Description
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
