--- a/sites/default/config/language.content_settings.node.person.yml
+++ b/sites/default/config/language.content_settings.node.person.yml
@@ -8,9 +8,9 @@ dependencies:
     - content_translation
 third_party_settings:
   content_translation:
-    enabled: false
+    enabled: true
 id: node.person
 target_entity_type_id: node
 target_bundle: person
 default_langcode: site_default
-language_alterable: false
+language_alterable: true
