--- a/sites/default/config/core.base_field_override.node.location.title.yml
+++ b/sites/default/config/core.base_field_override.node.location.title.yml
@@ -8,7 +8,7 @@ id: node.location.title
 field_name: title
 entity_type: node
 bundle: location
-label: Location
+label: 'Location name'
 description: ''
 required: true
 translatable: false
