--- a/sites/default/config/node.type.location.yml
+++ b/sites/default/config/node.type.location.yml
@@ -9,7 +9,7 @@ third_party_settings:
     available_menus:
       - main
     parent: 'main:'
-name: 'Location name'
+name: Location
 type: location
 description: 'Location name,image,description,address,geofield'
 help: ''
